# salicin-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  GRAMMAR.md  LANGUAGE.md  LICENSE  README.md
compiler/src/: alloc.rs  ast.rs  cleanup.rs  codegen.rs  core.rs  lexer.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  modules.rs  parser.rs
compiler/src/codegen/: access.rs  arrays.rs  assignment.rs  calls.rs  chain.rs  cleanup_plan.rs  coalesce.rs  compile_time.rs  constructors.rs  control.rs  effects.rs  emitter.rs  fallible.rs  flow.rs  functions.rs  handlers.rs  hir.rs  inference.rs  layouts.rs  lower.rs  matches.rs  members.rs  mod.rs  names.rs  nominals.rs  operators.rs  ownership.rs  places.rs  raw.rs  references.rs  registry.rs  source_rewrite.rs  tests.rs  throws.rs  types.rs
docs/: README.md  runtime.md
docs/compiler/: architecture.md
docs/language/: algebraic-effects.md  control-flow.md  grammar.md  specification.md
docs/project/: status.md
docs/standard-library/: README.md  alloc.md  core.md
examples/: basics.sali  basics.sc
runtime/: allocator.c
src/: alloc.rs  ast.rs  cleanup.rs  codegen.rs  core.rs  lexer.rs  lib.rs  main.rs  manifest.rs  modules.rs  parser.rs
tests/: cli.rs
tests/fixtures/fail/: add_trait_ambiguous_literal.sali  add_trait_ambiguous_literal.sc  add_trait_malformed_schema.sali  add_trait_missing_impl.sali  add_trait_missing_impl.sc  add_trait_rhs_mismatch.sali  add_trait_rhs_mismatch.sc  add_trait_rhs_use_after_move.sali  add_trait_rhs_use_after_move.sc  add_trait_use_after_move.sali  (+403 more)
tools/: migrate_match_syntax.mjs
(+591 files in other folders)
