[package]
name = "salicin-lang"
version = "0.36.0"
edition = "2021"
description = "The compiler and language specification for the Salicin programming language"
license = "MIT"
repository = "https://github.com/suransea/salicin-lang"

[[bin]]
name = "salic"
path = "src/main.rs"

[dependencies]
same-file = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
